@@ -30,6 +30,8 @@ import java.text.*;
 /**
  * Utility functions for working with numbers
  *
+ * This class is JDK 1.4 compatible.
+ *
  * @author angel
  * @version $Id$
  * @since Jan 9, 2006
@@ -41,6 +43,28 @@ public class NumberUtil
 
     private static final DecimalFormat floatFormatter;
     private static final DecimalFormat doubleFormatter;
+    private static final BigInteger bigIntTenPow[];
+    private static final BigInteger bigIntMinUnscaled[];
+    private static final BigInteger bigIntMaxUnscaled[];
+
+    // For JDK 1.4 compatibility
+    private static final BigInteger bigIntTen = BigInteger.valueOf(10);
+
+    public static final Byte MIN_BYTE = new Byte(Byte.MIN_VALUE);
+    public static final Byte MAX_BYTE = new Byte(Byte.MAX_VALUE);
+    public static final Integer MIN_INTEGER = new Integer(Integer.MIN_VALUE);
+    public static final Integer MAX_INTEGER = new Integer(Integer.MAX_VALUE);
+    public static final Short MIN_SHORT = new Short(Short.MIN_VALUE);
+    public static final Short MAX_SHORT = new Short(Short.MAX_VALUE);
+    public static final Long MIN_LONG = new Long(Long.MIN_VALUE);
+    public static final Long MAX_LONG = new Long(Long.MAX_VALUE);
+    public static final Float MIN_FLOAT = new Float(-Float.MAX_VALUE);
+    public static final Float MAX_FLOAT = new Float(Float.MAX_VALUE);
+    public static final Double MIN_DOUBLE = new Double(-Double.MAX_VALUE);
+    public static final Double MAX_DOUBLE = new Double(Double.MAX_VALUE);
+
+    public static final Integer INTEGER_ZERO = new Integer(0);
+    public static final Integer INTEGER_ONE = new Integer(1);
 
     static {
         // TODO: DecimalFormat uses ROUND_HALF_EVEN, not ROUND_HALF_UP
@@ -51,28 +75,42 @@ public class NumberUtil
         // Double: precision of 16 (15 digits after .)
         doubleFormatter = new DecimalFormat();
         doubleFormatter.applyPattern("0.###############E0");
+
+        bigIntTenPow = new BigInteger[20];
+        bigIntMinUnscaled = new BigInteger[20];
+        bigIntMaxUnscaled = new BigInteger[20];
+
+        for (int i = 0; i < bigIntTenPow.length; i++) {
+            bigIntTenPow[i] = bigIntTen.pow(i);
+            if (i < 19) {
+                bigIntMaxUnscaled[i] = bigIntTenPow[i].subtract(BigInteger.ONE);
+                bigIntMinUnscaled[i] = bigIntMaxUnscaled[i].negate();
+            } else {
+                bigIntMaxUnscaled[i] = BigInteger.valueOf(Long.MAX_VALUE);
+                bigIntMinUnscaled[i] = BigInteger.valueOf(Long.MIN_VALUE);
+            }
+        }
     }
 
     //~ Methods ----------------------------------------------------------------
 
+    public static final BigInteger powTen(int exponent)
+    {
+        if (exponent >= 0 && exponent < bigIntTenPow.length) {
+            return bigIntTenPow[exponent];
+        } else {
+            return bigIntTen.pow(exponent);
+        }
+    }
+
     public static final BigInteger getMaxUnscaled(int precision)
     {
-        if (precision < 19) {
-            BigInteger temp = BigInteger.TEN.pow(precision);
-            return temp.subtract(BigInteger.ONE);
-        } else {
-            return BigInteger.valueOf(Long.MAX_VALUE);
-        }
+        return bigIntMaxUnscaled[precision];
     }
 
     public static final BigInteger getMinUnscaled(int precision)
     {
-        if (precision < 19) {
-            BigInteger temp = BigInteger.TEN.pow(precision);
-            return temp.subtract(BigInteger.ONE).negate();
-        } else {
-            return BigInteger.valueOf(Long.MIN_VALUE);
-        }
+        return bigIntMinUnscaled[precision];
     }
 
     public static final BigDecimal rescaleBigDecimal(BigDecimal bd, int scale)
@@ -98,7 +136,9 @@ public class NumberUtil
             return (BigDecimal) number;
         } else if ((number instanceof Double)
             || (number instanceof Float)) {
-            return BigDecimal.valueOf(((Number) number).doubleValue());
+            // For JDK 1.4 compatibility
+            return new BigDecimal(((Number) number).doubleValue());
+            //return BigDecimal.valueOf(((Number) number).doubleValue());
         } else if (number instanceof BigInteger) {
             return new BigDecimal((BigInteger) number);
         } else {
@@ -137,7 +177,9 @@ public class NumberUtil
         if ((a == null) || (b == null)) {
             return null;
         }
-        return Double.valueOf(a.doubleValue() + b.doubleValue());
+        // For JDK 1.4 compatibility
+        return new Double(a.doubleValue() + b.doubleValue());
+        //return Double.valueOf(a.doubleValue() + b.doubleValue());
     }
 
     public static Double divide(Double a, Double b)
@@ -145,7 +187,9 @@ public class NumberUtil
         if ((a == null) || (b == null) || (b.doubleValue() == 0.0)) {
             return null;
         }
-        return Double.valueOf(a.doubleValue() / b.doubleValue());
+        // For JDK 1.4 compatibility
+        return new Double(a.doubleValue() / b.doubleValue());
+        // return Double.valueOf(a.doubleValue() / b.doubleValue());
     }
 
     public static Double multiply(Double a, Double b)
@@ -153,7 +197,9 @@ public class NumberUtil
         if ((a == null) || (b == null)) {
             return null;
         }
-        return Double.valueOf(a.doubleValue() * b.doubleValue());
+        // For JDK 1.4 compatibility
+        return new Double(a.doubleValue() * b.doubleValue());
+        //return Double.valueOf(a.doubleValue() * b.doubleValue());
     }
 }
 
